--- a/.gitattributes
+++ b/.gitattributes
@@ -20,3 +20,4 @@
 *.stl filter=lfs diff=lfs merge=lfs -text
 *.dwg filter=lfs diff=lfs merge=lfs -text
 *.7z filter=lfs diff=lfs merge=lfs -text
+ubuntuImage/*.img.xz.part-* filter=lfs diff=lfs merge=lfs -text
